<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_baseline_group_36"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_baseline_article_36"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out"/>
    </group>
</menu>