<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/normalPadding"
    android:paddingRight="@dimen/normalPadding"
    android:paddingBottom="@dimen/normalPadding"
    tools:context=".AddCategoryActivity">
    <TextView
        android:id="@+id/add_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/viewParent.headerText"
        android:layout_marginTop="24dp"
        android:text="@string/add_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/image_add_category"
        android:layout_width="350dp"
        android:layout_height="172dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_category_title"
        tools:srcCompat="@tools:sample/avatars"/>
    <ImageButton
        android:id="@+id/btnSelectCateImgAdd"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_add_category"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24"/>

    <TextView
        android:id="@+id/tvCateAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectCateImgAdd"/>
    <EditText
        android:id="@+id/etCateAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_name"
        app:layout_constraintTop_toBottomOf="@+id/tvCateAddName"/>
    <TextView
        android:id="@+id/tvCateAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCateAddName"/>
    <EditText
        android:id="@+id/etCateAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="5"
        android:maxLines="8"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/tvCateAddDescription"/>
    <Button
        android:id="@+id/btnSaveCateAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCateAddDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>