<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCategoryActivity"
    android:paddingLeft="@dimen/normalPadding"
    android:paddingRight="@dimen/normalPadding"
    android:paddingBottom="@dimen/normalPadding">

    <TextView
        android:id="@+id/tvEditCategory"
        style="@style/viewParent.headerText"
        android:layout_marginTop="24dp"
        android:text="@string/edit_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgEditCategory"
        android:layout_width="359dp"
        android:layout_height="172dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditCategory"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_name"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryName"
        tools:layout_editor_absoluteX="100dp" />

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectCategoryImg" />

    <ImageButton
        android:id="@+id/btnSelectCategoryImg"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEditCategory"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />


    <TextView
        android:id="@+id/tvCategoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategoryName"
        />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="5"
        android:maxLines="8"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryDescription"
        tools:layout_editor_absoluteX="53dp" />

    <Button
        android:id="@+id/btnSaveEditCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.011" />

</androidx.constraintlayout.widget.ConstraintLayout>

