<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/postCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="15dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardPreventCornerOverlap="false"
        android:backgroundTint="@color/latest_post_bg"
        android:layout_margin="@dimen/card_margin">
        <ImageView
            android:id="@+id/imgPostCard"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@drawable/frutorials" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="12dp"
            card_view:cardCornerRadius="25dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/imgOwnerPostCard"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPostCardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_slogan"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvOwnerPostName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"/>
                <TextView
                    android:id="@+id/tvPostCreatedTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:text="@string/all_posts"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>